--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,22 @@ const {title} = Astro.props
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="apple-mobile-web-app-title" content="Córtame" />
+
+		<meta name="description" content="Crea enlaces cortos, genera códigos QR y analiza el rendimiento de tus enlaces con nuestra plataforma potenciada por IA.">
+
+		<meta property="og:url" content="https://cortame-app.vercel.app">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Córtame - Acortador de URL">
+		<meta property="og:description" content="Crea enlaces cortos, genera códigos QR y analiza el rendimiento de tus enlaces con nuestra plataforma potenciada por IA.">
+		<meta property="og:image" content="/opengraph.png">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="cortame-app.vercel.app">
+		<meta property="twitter:url" content="https://cortame-app.vercel.app">
+		<meta name="twitter:title" content="Córtame - Acortador de URL">
+		<meta name="twitter:description" content="Crea enlaces cortos, genera códigos QR y analiza el rendimiento de tus enlaces con nuestra plataforma potenciada por IA.">
+		<meta name="twitter:image" content="/opengraph.png">
+
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen bg-gradient-to-b from-forest to-[#202020] text-white">
