--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,14 +25,14 @@ const {title} = Astro.props
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Córtame - Acortador de URL">
 		<meta property="og:description" content="Crea enlaces cortos, genera códigos QR y analiza el rendimiento de tus enlaces con nuestra plataforma potenciada por IA.">
-		<meta property="og:image" content="https://cortame-app.vercel.app/opengraph.img">
+		<meta property="og:image" content="https://cortame-app.vercel.app/opengraph.png">
 
 		<meta name="twitter:card" content="summary_large_image">
 		<meta property="twitter:domain" content="cortame-app.vercel.app">
 		<meta property="twitter:url" content="https://cortame-app.vercel.app">
 		<meta name="twitter:title" content="Córtame - Acortador de URL">
 		<meta name="twitter:description" content="Crea enlaces cortos, genera códigos QR y analiza el rendimiento de tus enlaces con nuestra plataforma potenciada por IA.">
-		<meta name="twitter:image" content="https://cortame-app.vercel.app/opengraph.img">
+		<meta name="twitter:image" content="https://cortame-app.vercel.app/opengraph.png">
 
 		<title>{title}</title>
 	</head>
