--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -14,7 +14,7 @@ import { getUserLinks } from "@/db/client";
 const user = await Astro.locals.currentUser();
 if (!user) return Astro.redirect("/");
 
-const BASE_URL = Astro.url.origin
+const HOSTNAME = Astro.url.host
 
 const userId = user.emailAddresses[0]?.emailAddress;
 const userLinks = await getUserLinks(userId);
@@ -63,7 +63,7 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
               <span
                 class="bg-[#1a2622] border rounded-t-md lg:border-r-0 lg:rounded-md lg:rounded-r-none border-[#2a3c36] px-3 py-2 text-gray-400 w-full lg:w-fit"
               >
-                {BASE_URL}
+                https://{HOSTNAME}/
               </span>
               <input
                 name="slug"
@@ -155,7 +155,7 @@ const randomNumber = Math.floor(Math.random() * 150) + 1
                     </a>
                     <button 
                       class="text-gray-400 hover:text-white hover:-rotate-3 transition cursor-pointer copy-btn"
-                      data-url={`${BASE_URL}/${id}`}
+                      data-url={`https://${HOSTNAME}/${id}`}
                     >
                       <Copy width={18} height={18} />
                     </button>
