--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,6 +74,7 @@ const {title} = Astro.props
 		background: linear-gradient(180deg, #253731 0%, #202020 100%);
     display: flex;
     flex-direction: column;
+		overscroll-behavior: none;
 	}
 
 	html { 
