fix: correct main title in index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import {
 <Layout title="Córtame - Acortador de URL">
   <div class="max-w-4xl mx-auto text-center flex flex-col items-center justify-center gap-10 pt-20">
     <h1 class="text-4xl md:text-6xl font-bold text-balance">
-      Acorta tus tus enlaces con <span class="text-emerald-400">IA</span>
+      Acorta tus enlaces con <span class="text-emerald-400">IA</span>
     </h1>
     <p class="text-lg md:text-xl text-gray-300 text-balance">
       Crea enlaces cortos, genera códigos QR y analiza el rendimiento de tus
