--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -2,13 +2,7 @@
 import Card from "@/components/Card.astro";
 import LinkCard from "@/components/LinkCard.astro";
 import Layout from "@/layouts/Layout.astro";
-import Copy from "@/assets/svg/copy.svg";
-import Link from "@/assets/svg/link.svg";
-import ChartBar from "@/assets/svg/chart-bar.svg";
-import QR from "@/assets/svg/qrcode.svg";
-import Trash from "@/assets/svg/trash.svg";
-import ExternalLink from "@/assets/svg/external-link.svg";
-import Sparkles from "@/assets/svg/sparkles.svg"
+
 import { getUserLinks } from "@/db/client";
 
 const user = await Astro.locals.currentUser();
@@ -157,72 +151,12 @@ const totalVisits = userLinks.reduce((acc, link) => acc + Number(link.visits ?? 
           <span class="text-center text-gray-400 mt-4 flex justify-center">No hay ningún link creado</span>
         ) : (
         userLinks.map(({ id, original, visits }) => (
-          <LinkCard class="bg-forest-darker border-forest text-white">
-            <div class="p-4">
-              <div class="flex flex-col lg:flex-row lg:items-center justify-between gap-4">
-                <div class="flex-1 truncate">
-                  <div class="flex items-center gap-2 mb-1">
-                    <div class="text-emerald-500">
-                      <Link width={18} height={18} stroke="currentColor" />
-                    </div>
-                    <a
-                      href={String(original)}
-                      target="_blank"
-                      class="font-medium hover:underline cursor-pointer"
-                    >
-                      /{id}
-                    </a>
-                    <button 
-                      class="text-gray-400 hover:text-white hover:-rotate-3 transition cursor-pointer copy-btn"
-                      data-url={`https://${DOMAIN_URL}/${id}`}
-                    >
-                      <Copy width={18} height={18} />
-                    </button>
-                  </div>
-                  <div class="text-sm text-gray-400 truncate mb-2">
-                    {original}
-                  </div>
-                  <div class="text-xs text-gray-300 bg-[#1a2622] rounded py-2 px-4 border border-forest flex items-center gap-1 mb-1 justify-between">
-                    <p class="line-clamp-2 text-gray-400">Sin descripción</p>
-                    <button
-                    class="text-emerald-400 hover:text-white flex w-28 justify-around items-center transition cursor-not-allowed"
-                    aria-disabled
-                    >
-                      <Sparkles width={16} height={16} stroke="currentColor" />
-                      <span>Generar con IA</span>
-                    </button>
-                  </div>
-                </div>
-                <div class="flex items-center gap-6">
-                  <div class="flex items-center gap-2 text-sm text-gray-400">
-                    <ChartBar width={18} height={18} />
-                    <span>{visits} visitas</span>
-                  </div>
-                  <button
-                    data-url-id={id}
-                    class="qr-btn border border-emerald-600 rounded-md text-emerald-400 hover:text-white hover:bg-emerald-900/40 flex justify-between items-center w-16 h-8 px-2 text-sm
-                    transition cursor-pointer"
-                  >
-                    <QR width={18} height={18} />
-                    <span>QR</span>
-                  </button>
-                  <a
-                    href={String(original)}
-                    target="_blank"
-                    class="text-gray-400 hover:text-white transition cursor-pointer"
-                  >
-                    <ExternalLink width={18} height={18} />
-                  </a>
-                  <button
-                    data-link={id} 
-                    class="delete-btn text-gray-400 hover:text-red-800 transition cursor-pointer"
-                  >
-                    <Trash width={18} height={18} />
-                  </button>
-                </div>
-              </div>
-            </div>
-          </LinkCard>
+          <LinkCard 
+            class="bg-forest-darker border-forest text-white" 
+            id={id}
+            original={original}
+            visits={visits}
+          />
         )))
       }
     </div>
